Added page 2 and put pictures on page 1

--- a/pet-website.html
+++ b/pet-website.html
@@ -6,11 +6,12 @@
   <body>
     <h1>All About Peaches</h1>
     <h2>"Warming Our Hearts One Dragon at a Time"</h2>
+    <a href="http://dragontales.wikia.com/wiki/Dragon_Tales_Wiki"><img src="dragon-tales.jpeg" height="600" width="700"></a>
     <p>Height = 22 ft</p>
-    <p>Weight = 14 tons = 28,000 pounds</p>
+    <p><strong>Weight = 14 tons = 28,000 pounds</strong></p>
     <h3>Favorite Foods</h3>
     <ul>
-      <li>S'mores</li>
+      <li><em>S'mores</em></li>
       <li>Lamb Gyro</li>
       <li>Coal</li>
     </ul>
@@ -26,5 +27,8 @@
       <li>Hospital therapy animal</li>
       <li>5K mud runs</li>
     </ul>
+    <p><a href="pet-website-2.html"> Page 2 </a></p>
+    <img src="cookie-dragon.jpg" alt="A picture of a baby dragon eating a cookie" height="350" width="350"><img src="peaches.jpg" alt="A picture of a baby dragon breathing fire" height="350" width="350">
+    <p><img src="reading-dragon.jpg" alt="A picture of a dragon reading a book" height="700" width="700"></p>
   </body>
 </html>
