clean up file names

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
       <h1>All About Peaches</h1>
       <h2>"Warming Our Hearts One Dragon at a Time"</h2>
-      <a href="http://dragontales.wikia.com/wiki/Dragon_Tales_Wiki"><img src="dragon-tales.jpeg" id = "dragontales" height="600" width="700"></a>
+      <a href="http://dragontales.wikia.com/wiki/Dragon_Tales_Wiki"><img src="img/dragon-tales.jpeg" id = "dragontales" height="600" width="700"></a>
       <p>Height = 22 ft</p>
       <p><strong>Weight = 14 tons = 28,000 pounds</strong></p>
       <h3>Favorite Foods</h3>
@@ -32,8 +32,8 @@
         <li>5K mud runs</li>
       </ul>
       <p><a href="pet-website-2.html"> Page 2 </a></p>
-      <img src="cookie-dragon.jpg" class = "baby" alt="A picture of a baby dragon eating a cookie" height="350" width="350"><img src="peaches.jpg" class = "baby" alt="A picture of a baby dragon breathing fire" height="350" width="350">
-      <p><img src="reading-dragon.jpg" id = "readingdragon" alt="A picture of a dragon reading a book" height="700" width="700"></p>
+      <img src="img/cookie-dragon.jpg" class = "baby" alt="A picture of a baby dragon eating a cookie" height="350" width="350"><img src="img/peaches.jpg" class = "baby" alt="A picture of a baby dragon breathing fire" height="350" width="350">
+      <p><img src="img/reading-dragon.jpg" id = "readingdragon" alt="A picture of a dragon reading a book" height="700" width="700"></p>
     </body>
   </div>
 </html>
